@@ -1,3 +1,12 @@
+2018-06-14  Jon Davis  <jond@apple.com>
+
+        Minor layout fix for WebKit Feature Status Page
+        https://bugs.webkit.org/show_bug.cgi?id=186539
+
+        Reviewed by Timothy Hatcher.
+
+        * wp-content/themes/webkit/status.php: Added padding below the bottom paragraph.
+
 2018-06-14  Roy Reapor  <rreapor@apple.com>
 
         jQuery UI image assets are missing on webkit.org website.
